fixed routing need to get file upload working.

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,17 @@
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  <div class="app"></div>
+  <div class="app">
+  	
+  	<div class="container">
+
+
+
+  	
+  	</div>
+
+
+  </div>
   
   <script src="js/main.js"></script>
 </body>
